Fixed alignment of nav bar for 'home' 'products' and 'games'

--- a/products.css
+++ b/products.css
@@ -33,6 +33,7 @@ ul {
     margin-top: -23px;
     margin-left: 0;
     align-items: center;
+    margin-left: 40px;
 }
 
 li {
